<resources>
    <string name="app_name">Home Assignment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login_id">Login Id</string>
    <string name="enter_id">Enter ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="view_all">View All</string>
    <string name="clear_all">CLear All</string>
    <string name="payment">Payment</string>
    <string name="payment_status">Payment Status</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="regular_courses">Regular Courses</string>
    <string name="courses">Courses</string>
    <string name="dppl">DPPL</string>
    <string name="daa">DAA</string>
    <string name="se">SE</string>
    <string name="os">OS</string>
    <string name="dmgt">DMGT</string>
    <string name="email_address">Email address</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="selective_courses">Selective Courses</string>
    <string name="ai">AI</string>
    <string name="ml">ML</string>
    <string name="npl">NPL</string>
    <string name="itw2">ITW2</string>
    <string name="register">REGISTER</string>
    <string name="exit">EXIT</string>
    <string name="show_all">Show All</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="semester_registration">Semester Registration</string>
    <string name="student_accounts">Student Accounts</string>
    <string name="payment_details">Payment Details</string>
    <string name="course_details">Course Details</string>
    <string name="logo">logo</string>
    <string-array name="spinner">
        <item>Choose Option</item>
        <item>Paid</item>
        <item>Not Paid</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
