<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/select_electives"
        android:layout_width="135dp"
        android:layout_height="26dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/selective_courses"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <CheckBox
        android:id="@+id/itw2"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/itw2"
        android:textColor="@android:color/widget_edittext_dark"
        android:textColorHint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dmgt" />

    <CheckBox
        android:id="@+id/daa"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/daa"
        android:textColor="@android:color/widget_edittext_dark"
        android:textColorHint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courses" />

    <CheckBox
        android:id="@+id/se"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/se"
        android:textColor="@android:color/widget_edittext_dark"
        android:textColorHint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daa" />

    <RadioGroup
        android:id="@+id/electives"
        android:layout_width="154dp"
        android:layout_height="233dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_electives">

        <RadioButton
            android:id="@+id/ai"
            android:layout_width="95dp"
            android:layout_height="43dp"
            android:text="@string/ai"
            android:textColor="@android:color/widget_edittext_dark"
            android:textColorHint="@android:color/white" />

        <RadioButton
            android:id="@+id/ml"
            android:layout_width="95dp"
            android:layout_height="43dp"
            android:text="@string/ml"
            android:textColor="@android:color/widget_edittext_dark"
            android:textColorHint="@android:color/white" />

        <RadioButton
            android:id="@+id/npl"
            android:layout_width="95dp"
            android:layout_height="43dp"
            android:text="@string/npl"
            android:textColor="@android:color/widget_edittext_dark"
            android:textColorHint="@android:color/white" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/dppl"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/dppl"
        android:textColor="@android:color/widget_edittext_dark"
        android:textColorHint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/os" />

    <CheckBox
        android:id="@+id/os"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/os"
        android:textColor="@android:color/widget_edittext_dark"
        android:textColorHint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/se" />

    <TextView
        android:id="@+id/courses"
        android:layout_width="135dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/regular_courses"
        android:textColor="@android:color/widget_edittext_dark"
        android:textColorHint="@android:color/widget_edittext_dark"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <CheckBox
        android:id="@+id/dmgt"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/dmgt"
        android:textColor="@android:color/widget_edittext_dark"
        android:textColorHint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dppl" />

    <Button
        android:id="@+id/register"
        android:layout_width="85dp"
        android:layout_height="47dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginBottom="204dp"
        android:background="#48100E0E"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="32dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/courses"
        android:textColor="#000000"
        android:textSize="26sp"
        app:fontFamily="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>