<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".StudentLogin">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_flattr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/et_bg"
        android:hint="@string/enter_id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_eye"
        android:drawableRight="@drawable/ic_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText3" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_remember_password"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/footer_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <View
        android:id="@+id/footer_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/signu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/login_form_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer_line" />

</androidx.constraintlayout.widget.ConstraintLayout>