<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button10"
        android:layout_width="147dp"
        android:layout_height="78dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#48100E0E"
        android:text="@string/teacher"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="147dp"
        android:layout_height="78dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="332dp"
        android:background="#48100E0E"
        android:text="@string/student"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="326dp"
        android:layout_height="120dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="136dp"
        android:text="@string/semester_registration"
        android:textColor="#29260D"
        android:textSize="30sp"
        app:fontFamily="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>