<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context=".Payment">

    <EditText
        android:id="@+id/editText6"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/et_bg"
        android:hint="@string/roll_number"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="#8A000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/et_bg"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="#8A000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/payment"

        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="40sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:background="#8DFFFFFF"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="177dp"
        android:layout_height="37dp"
        android:layout_marginTop="84dp"
        android:text="@string/payment_status"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="20sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

</androidx.constraintlayout.widget.ConstraintLayout>