<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_SignUp"
    android:background="@drawable/bg_signup">

    <EditText
        android:id="@+id/editText"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/et_bg"
        android:hint="@string/enter_id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="#8A000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_eye"
        android:drawableRight="@drawable/ic_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#8A000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="278dp"
        android:layout_height="78dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="80dp"
        android:text="@string/sign_up"
        android:textColor="#8A000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="80dp"
        android:background="#48100E0E"
        android:text="@string/sign_up"
        android:textColor="#FFFDFD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>